--- a/kilua-assets/src/css/style.css
+++ b/kilua-assets/src/css/style.css
@@ -26,10 +26,6 @@
     white-space: nowrap !important;
 }
 
-.text-danger {
-    color: var(--bs-danger, #dc3545) !important;
-}
-
 .splitpanel-vertical {
     display: flex;
     flex-direction: row;
@@ -86,4 +82,12 @@
 
 .kilua-radio-inline {
     display: inline-block;
+}
+
+select:required:invalid {
+    color: rgb(128, 128, 128);
+}
+
+select:required option {
+    color: black;
 }
