New version of kilua-assets

--- a/kilua-assets/src/css/style.css
+++ b/kilua-assets/src/css/style.css
@@ -91,3 +91,15 @@ select:required:invalid {
 select:required option {
     color: black;
 }
+
+trix-editor {
+    overflow-y: auto;
+}
+
+trix-toolbar .trix-button-group {
+    margin-bottom: 3px !important;
+}
+
+[data-bs-theme="dark"] trix-toolbar .trix-button {
+    background: #fff !important;
+}
