--- a/kilua-assets/src/css/style.css
+++ b/kilua-assets/src/css/style.css
@@ -100,6 +100,14 @@ ul.tabs-top > li {
     isolation: inherit;
 }
 
+.btn-group-xsm > .btn, .btn-xsm {
+    --bs-btn-padding-y: 0.1rem;
+    --bs-btn-padding-x: 0.4rem;
+    --bs-btn-font-size: 0.8rem;
+    --bs-btn-border-radius: 0.25rem;
+    padding-top: 3px;
+}
+
 /*!
  * bootstrap-vertical-tabs - v1.2.2
  * https://dbtek.github.io/bootstrap-vertical-tabs
