Upgrade template to 0.0.31. Add kotlin-vite plugin to the standard template.

--- a/templates/template/src/commonMain/resources/index.html
+++ b/templates/template/src/commonMain/resources/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <title>Kilua template</title>
     <base href="/">
-    <script src="main.bundle.js"></script>
+    <script src="template.js"></script>
 </head>
 <body>
 <div id="root"></div>
